fixes #15 dark-theme (ci skip)

--- a/src/Resources/views/Collector/soap.html.twig
+++ b/src/Resources/views/Collector/soap.html.twig
@@ -71,6 +71,10 @@
             padding: 1em;
             border: 1px solid #DDD;
         }
+        .theme-dark .soap-response-container {
+            background: #36393e;
+            color: #e0e0e0;
+        }
         .call {
             border: 1px solid #DDD;
         }
