bug: data provider xml content add css overflow

--- a/src/Resources/views/Collector/soap.html.twig
+++ b/src/Resources/views/Collector/soap.html.twig
@@ -70,6 +70,7 @@
             margin: .5em 0;
             padding: 1em;
             border: 1px solid #DDD;
+            overflow: scroll;
         }
         .theme-dark .soap-xml-container {
             background: #36393e;
